Fix white space to right of viewport

--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,10 @@
 
 body, html {
     height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; 
 }
 
 nav a {
@@ -18,7 +22,6 @@ nav img {
 .navbar-brand {
     width: 9rem;
 }
-
 
 /*-- Home Section --*/
 
